# test-time-training

./: .env.example  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
artifacts/: manifest.json
configs/: settings.json
docs/: icml_technical_report.md  memo.md  paper.md  runbook.md
model_cards/: kernel_rl.md
scripts/: adaptive_train.py  batch_ttt.py  best_of_n.py  compare_inner_loop.py  compute_selection_statistics.py  eval_checkpoint.sh  eval_mutator_quality.py  eval_run.py  eval_task.py  inner_loop_smoke.py  kb_smoke.py  l1_smoke.py  make_plots.py  make_split.py  phase1_experiment_scope.py  print_manifest.py  repro_small.py  run_one.py  sdpo_train.py  train_smoke.py  write_manifest.py  write_memo.py
splits/: l1_seed42.json  l1_seed43.json  l1_seed44.json  l2_seed42.json
src/: check_env.py  guardrails.py  metrics.py  rlvr_utils.py  tinker_dataset.py  tinker_env.py
src/env/: __init__.py  evaluator.py  mutator.py  replay_buffer.py  schema.py  solver.py  tasking.py  teacher.py  telemetry.py  training_replay.py
src/utils/: checkpoint_utils.py  code_utils.py  dataset_utils.py  env_utils.py  feedback_utils.py  git_utils.py  hash_utils.py  path_utils.py  tinker_utils.py
tests/: test_adaptive_train.py  test_boa_selection.py  test_env_schema.py  test_evaluator.py  test_feedback_utils.py  test_guardrails.py  test_mutator.py  test_phase1_experiment_scope.py  test_replay_buffer.py  test_smoke.py  test_solver_backend.py  test_teacher.py  test_telemetry.py  test_tinker_env.py  test_training_replay.py
